--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets. — <cite>Chris Pratt</cite></blockquote>
     <aside>
       <h2>Common Varieties</h2>
-      <ol>
+      <ol class="alphas">
         <li>Albino</li>
         <li>Bulls Blood</li>
         <li>Chioggia</li>
@@ -63,7 +63,7 @@
       </dl>
 
       <h2>Tags</h2>
-      <ul>
+      <ul class="bullets">
         <li>Crimson</li>
         <li>Awesome</li>
         <li>Pickle-able</li>
